--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "i": "^0.3.7",
+    "npm": "^10.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -37,7 +41,9 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.8",
     "@types/jest": "28.1.4",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
